--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ verify_ssl = true
 django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
+channels = "*"
+channels-redis = "*"
 
 [requires]
 python_version = "3.7"
